# image-dataset-manager

./: README.md  SPEC.md  config.yaml  main.py  pyproject.toml
app/: config.py  database.py  main.py  models.py  schemas.py
app/routers/: ai.py  datasets.py
data/: datasets.db
